// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders custom styles 1`] = `
.c0 {
  background: #6b41d2;
  color: #fff;
  border: none;
  border-radius: 10px;
  font-size: 16px;
  font-weight: 600;
  margin: 5px;
  padding: 10px 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  outline: none;
  cursor: pointer;
  -webkit-transition: 250ms ease-out;
  transition: 250ms ease-out;
}

.c0:hover,
.c0:focus,
.c0:active {
  background: #976dff;
  color: #444;
}

<button
  className="c0"
  color="#fff"
  display="flex"
/>
`;

exports[`it renders default styles 1`] = `
.c0 {
  background: #2a52fb;
  color: #fff;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  font-weight: 400;
  margin: 5px;
  padding: 10px 14px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
  outline: none;
  cursor: pointer;
  -webkit-transition: 200ms cubic-bezier(0.465,0.183,0.153,0.946);
  transition: 200ms cubic-bezier(0.465,0.183,0.153,0.946);
}

.c0:hover,
.c0:focus,
.c0:active {
  background: #a3b5ff;
  color: #000;
}

<button
  className="c0"
  color="#fff"
  display="flex"
/>
`;
